--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_library(library test.cpp)
+add_library(library STATIC test.cpp)
 target_include_directories(library PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
